fixing styling blogpost too large

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,9 +377,14 @@ footer p {
     object-position: center;
   }
 
+  .highlight__blogpost h3 {
+    margin-bottom: 5px;
+  }
+
   .section__blogpost .highlight__blogpost {
     background-color: var(--secondary-bg-color);
     width: 75%;
+    padding: 5px 10px;
   }
 
   .aside__highlights article {
@@ -435,6 +440,14 @@ footer p {
 
   .aside__highlights .highlights__content {
     width: 100%;
+  }
+
+  .section__blogpost h3 {
+    font-size: 1rem;
+  }
+
+  .section__blogpost .highlight__blogpost {
+    font-size: 0.9rem;
   }
 
   footer {
